# karakum

./: .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  secrets.yaml  toolchains.yaml
.claude/skills/karakum-config/: SKILL.md
.claude/skills/session-orient/: SKILL.md
agents/: abacus.yaml  takwin.yaml
containers/agent/: Dockerfile
containers/base/: Dockerfile  bashrc  entrypoint.sh  prompt.bashrc
containers/claude/: Dockerfile
containers/toolchain-node/: Dockerfile
containers/toolchain-proto/: Dockerfile
containers/toolchain-python/: Dockerfile
containers/toolchain-rust/: Dockerfile
docs/: architecture.md  configuration.md  ssh.md  testing.md
examples/: secrets.yaml  toolchains.yaml
examples/agents/: example.yaml
examples/projects/: example.yaml
karakum/: __main__.py  cleanup.py  cli.py  config.py  console.py  manifest.py  preflight.py  secrets.py  session.py
projects/: dewey.yaml  karakum.yaml  palimpsest.yaml
scripts/: build.sh  launch.sh  list-agents.sh  list-projects.sh
scripts/lib/: manifest.sh  preflight.sh  secrets.sh  worktree.sh
tests/: smoke.sh  test_build.py  test_cleanup.py  test_cli_args.py  test_entrypoint.py  test_launch_branches.py  test_preflight.py  test_resume.py  test_secrets.py  test_session_clean.py
