[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karakum"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "pyyaml>=6",
]

[project.scripts]
karakum = "karakum.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["karakum*"]
